Provide Java 11 forward compatibility.